# server_emulator

./: animal.json  index.html  main.js  package-lock.json  package.json  text.json
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/filter_chain/: chain.rs  method_validator.rs  mod.rs  parse_functions.rs  path_validator.rs  query_validator.rs  request_parser.rs
src-tauri/src/html/: mod.rs  template_engine.rs  types.rs
src-tauri/src/html/api/: add_item.rs  find_by_id.rs  find_by_queryparam.rs  mod.rs  no_logic.rs  not_found.rs  remove_by_id.rs  return_dataset.rs  util.rs
src-tauri/src/json/: types.rs
src-tauri/src/json/api/: add_item.rs  find_by_id.rs  find_by_queryparam.rs  mod.rs  not_found.rs  remove_by_id.rs  return_dataset.rs  util.rs
src-tauri/src/service/: datasetstruct.rs  mod.rs  read_operation.rs  types.rs  write_operation.rs
src-tauri/src/util/: html_responses.rs  mod.rs  request_handler.rs  request_util.rs  resolver.rs  template_engine.rs  types.rs  web_utils.rs
